<resources>
    <string name="app_name">Reminders</string>
    <string name="new_reminder">New Reminder</string>
    <string name="name_of_reminder">Name of reminder</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="reminder_description">Reminder Description</string>
    <string name="share">Collaborate?</string>
    <string name="email_if_share">Email (If Share)</string>
    <string name="time_to_alert">Time to alert</string>
    <string name="time_based">Notify me only during this time.</string>
    <string name="location_based">Location-Based</string>
    <string name="next">Finish</string>
    <string name="alert_type">Alert Type</string>
    <string name="don_t_alert_please">Vibrate</string>
    <string name="please_alert_me">Sound</string>
    <string name="start_date_text">Enter start date</string>
    <string name="strength">Strength</string>
    <string name="delete">Delete</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_description">Display my reminder.</string>
    <string name="open_app">Open Application</string>
    <string name="set_to_current_location">SET TO CURRENT LOCATION</string>
    <string name="no_reminders">No Reminders Yet! \n \n  Use the \'New Reminder\' button to create one!</string>
    <string name="start_time_text">Enter start time.</string>
    <string name="end_date_text">Enter end date</string>
    <string name="end_time_text">Enter end time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="location_name_you_choose">Location Name (You Choose)</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="settings">Settings</string>
    <string name="location_name">LOCATION NAME</string>
</resources>
